# commitmsg-ai-check

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
src/commitmsg_ai_check/: check_commitmsg.py
